# toucan-data-sdk

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  circle.yml  pyproject.toml  setup.cfg  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml  codeql-analysis.yml  labeler.yml  publish.yml
example/: model_augment.ipynb  model_basemaps.ipynb  model_data_specs.ipynb  model_debug.ipynb  validation_automatique.ipynb
requirements/: dev.in  dev.txt  prod.in  prod.txt  testing.in  testing.txt
tests/: test_postprocess.py  test_sdk.py  test_sdk_cache.py  test_sdk_extract.py  test_utils.py  tools.py  utils.py
tests/fakir/: test_fakir.py
tests/fixtures/: add_missing_row.csv  add_missing_row_2.csv  compute_cumsum.csv  compute_evolution.csv  compute_evolution_duplicates.csv  compute_ffill_by_group.csv  deleteme-exception.dump  roll_up.csv  roll_up_in.csv  two_values_melt_in.csv  two_values_melt_out.csv
tests/utils/: test_data_specs.py  test_decorators.py  test_decorators_cache.py  test_helpers.py
tests/utils/generic/: test_add_missing_row.py  test_aggregate_requesters.py  test_anonymization.py  test_clean.py  test_combine_columns_aggregation.py  test_compute_cumsum.py  test_compute_evolution.py  test_compute_ffill_by_group.py  test_date_requester.py  test_multiple_aggregations.py  test_roll.py  test_two_values_melt.py
tests/utils/postprocess/: test_add_aggregation_columns.py  test_argmax.py  test_categories_from_dates.py  test_converter.py  test_cumsum.py  test_fillna.py  test_filter.py  test_filter_by_date.py  test_groupby.py  test_if_else.py  test_json_to_table.py  test_linear_regression.py  test_math.py  test_melt.py  test_percentage.py  test_pivot.py  test_query_df.py  test_rank.py  test_rename.py  test_replace.py  test_round_values.py  test_sort.py  test_text.py  test_top.py  test_waterfall.py
toucan_data_sdk/: __init__.py  sdk.py  utils.py
toucan_data_sdk/fakir/: __init__.py  fake_data_generator.py  predict_number_of_row_from_conf.py
toucan_data_sdk/utils/: __init__.py  add_missing_row.py  aggregate_for_requesters.py  build_label_replacement_dict.py  clean.py  compute_cumsum.py  compute_evolution.py  data_specs.py  decorators.py  helpers.py  postprocess.py  randomize_values.py  traceback.py  two_values_melt.py
toucan_data_sdk/utils/generic/: __init__.py  add_missing_row.py  clean.py  combine_columns_aggregation.py  compute_cumsum.py  compute_evolution.py  compute_ffill_by_group.py  date_requester.py  multiple_aggregations.py  roll_up.py  two_values_melt.py
toucan_data_sdk/utils/postprocess/: __init__.py  add_aggregation_columns.py  argmax.py  categories_from_dates.py  converter.py  cumsum.py  fillna.py  filter.py  filter_by_date.py  groupby.py  if_else.py  json_to_table.py  linear_regression.py  math.py  melt.py  percentage.py  pivot.py  query_df.py  rank.py  rename.py  replace.py  round_values.py  sort.py  text.py  top.py  waterfall.py
