[metadata]
name = toucan_data_sdk
description = Toucan data SDK
author = Toucan Toco
url = https://github.com/ToucanToco/toucan-data-sdk
version = 4.9.0
license = BSD
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7


[options]
packages = find:
install_requires =
    engarde
    joblib>=0.12
    pandas==0.23.4
    python-slugify
    scipy
    tabulate
    toucan_client==1.0.0

[options.extras_require]
test =
    flake8
    pytest
    pytest-mock
    pytest-cov

[flake8]
exclude = __init__.py
max_line_length = 120

[tool:pytest]
addopts = -v -p no:warnings
