[metadata]
name = toucan_data_sdk
description = Toucan data SDK
author = Toucan Toco
url = https://github.com/ToucanToco/toucan-data-sdk
version = 6.2.3
license = BSD
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7


[options]
packages = find:
install_requires =
    engarde
    joblib>=0.12
    pandas==0.25.0
    python-slugify
    tabulate
    toucan_client==1.0.0

[options.packages.find]
include =
    toucan_data_sdk
    toucan_data_sdk.*

[options.extras_require]
test =
    black
    flake8
    isort
    mypy
    pytest
    pytest-cov
    pytest-mock

[flake8]
exclude = __init__.py
ignore = E203, E266, E501, W503
max-line-length = 100

[tool:pytest]
filterwarnings = ignore

[isort]
include_trailing_comma = True
line_length = 100
multi_line_output = 3
