[metadata]
name = toucan_data_sdk
description = Toucan data SDK
author = Toucan Toco
url = https://github.com/ToucanToco/toucan-data-sdk
version = 7.3.0
license = BSD
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    engarde
    joblib>=0.12
    pandas
    python-slugify
    tabulate
    toucan_client

[options.packages.find]
include =
    toucan_data_sdk
    toucan_data_sdk.*

[options.extras_require]
test =
    black
    flake8
    flake8-quotes
    isort
    mypy
    pytest
    pytest-cov
    pytest-mock

[flake8]
max-line-length = 100
ignore = E501, W503
inline-quotes = single
multiline-quotes = double
max-complexity = 12

[isort]
line_length = 100
multi_line_output = 3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True

[mypy]
ignore_missing_imports = True

[tool:pytest]
testpaths = tests
filterwarnings = ignore
